Update the UI design for the main activity, including an outlined text field and a logo for Cars4Sale. Also update originality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cars4Sale</string>
+    <string name="label">Car search</string>
+    <string name="helper_text">Please use the designated vocabulary</string>
 </resources>
