--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Cars4Sale</string>
+    <string name="page_title">Cars4Sale</string>
+    <string name="content_description_favorite">favortie</string>
+    <string name="content_description_search">search</string>
+    <string name="content_description_more">more</string>
+    <string name="favorite">favorite</string>
+    <string name="search">search</string>
+    <string name="more">more</string>
+    <string name="appbar_scrolling_view_behavior">scrolling view behavior</string>
     <string name="label">Car search</string>
     <string name="helper_text">Please use the designated vocabulary</string>
 </resources>
