--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Cars4Sale</string>
     <string name="tag_line">Get your car easier!</string>
     <string name="page_title">Home</string>
+    <string name="page_title_result">Search Results</string>
+    <string name="page_title_detail">Car Details</string>
     <string name="appbar_scrolling_view_behavior">scrolling view behavior</string>
     <string name="label">Car search</string>
     <string name="helper_text">Please use the designated vocabulary</string>
